{
    "name": "BackhoeInput",
    "maps": [
        {
            "name": "Backhoe",
            "id": "799c3536-2610-4538-b6ef-fcd9afc2a62d",
            "actions": [
                {
                    "name": "LeftCrawlerThrottle",
                    "type": "PassThrough",
                    "id": "66decee2-19aa-4c2e-9902-dedcd8d167b6",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftCrawlerReverse",
                    "type": "Button",
                    "id": "003218f8-98f9-4a0c-a321-8cb2b9033671",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightCrawlerThrottle",
                    "type": "PassThrough",
                    "id": "e9ec336b-3db6-4e06-8c73-cd7d7b80d5dc",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightCrawlerReverse",
                    "type": "Button",
                    "id": "5292ad8e-22c7-4c65-a700-1fd4e5b9c79e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Body",
                    "type": "PassThrough",
                    "id": "bf787ee8-3d00-4fbd-850c-d5f0ae65e44a",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Boom",
                    "type": "PassThrough",
                    "id": "7569d603-6ff5-4e10-a63c-65a554a1de58",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Arm",
                    "type": "PassThrough",
                    "id": "2f1f1909-3afa-47d0-bcb3-b7856d0bbb7f",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Bucket",
                    "type": "PassThrough",
                    "id": "fbad79d4-7c2c-419a-aa4b-b2b418dfad0b",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8f29a8e4-052d-49e3-9ae4-6791d6e22509",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftCrawlerThrottle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23e81460-055d-42bd-abaa-5f790392c9fc",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LeftCrawlerReverse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45329150-373e-4824-9ad9-8a3d5ebd5120",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightCrawlerThrottle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbc06d03-db2f-4c17-803e-9bcf4d5ac564",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RightCrawlerReverse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e2a310f-a9e3-4dfd-b9c7-5f7da5fdd486",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Body",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0f852e8-a19c-4fab-ab19-78d2bd3402c3",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "365cedc1-dfed-438a-b2e1-034cb52fcd52",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Arm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "835365a8-1b00-4575-9ded-1b16c55ee83e",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Bucket",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}